--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
     "deploy": "strapi deploy"
   },
   "dependencies": {
+    "@_sh/strapi-plugin-ckeditor": "^2.1.1",
     "@strapi/plugin-cloud": "4.25.2",
+    "@strapi/plugin-color-picker": "^4.25.2",
+    "@strapi/plugin-graphql": "^4.25.2",
     "@strapi/plugin-i18n": "4.25.2",
+    "@strapi/plugin-seo": "^1.9.9",
     "@strapi/plugin-users-permissions": "4.25.2",
     "@strapi/provider-upload-aws-s3": "^4.25.2",
     "@strapi/strapi": "4.25.2",
@@ -21,6 +25,8 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "5.3.4",
+    "strapi-advanced-uuid": "^1.3.0",
+    "strapi-plugin-slugify": "^2.3.8",
     "strapi-provider-upload-aws-s3": "^3.6.11",
     "styled-components": "5.3.3"
   },
