--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@strapi/plugin-users-permissions": "4.25.2",
     "@strapi/provider-upload-aws-s3": "^4.25.2",
     "@strapi/strapi": "4.25.2",
+    "@webbio/strapi-plugin-scheduler": "^1.0.6",
     "better-sqlite3": "8.6.0",
     "pg": "^8.12.0",
     "react": "^18.0.0",
